--- a/index.html
+++ b/index.html
@@ -3,29 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pesquisa de Satisfação</title>
+    <title>ex.26</title>
 </head>
 <body>
-    <div class=" formulario">
-        <form action="youtube.com.br" method="post">
-            <label for="nome">Nome</label>
-            <input type="text" id="nome" name="nome" placeholder="Seu nome">
-            <br>
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Digite seu email">
-            <br>
-            <label for="categoria">Categoria</label>
-            <select name="categoria" id="categoria">
-                <option value="elogio">elogio</option>
-                <option value="reclamação">reclamação</option>
-            </select>
-            <br>
-            <label for="mensagem">mensagem</label>
-            <textarea name="mensagem" id="mensagem" placeholder="deixe sua mensagem aqui"></textarea>
-            <br><br>
-            <button type="submit">enviar</button>
-        </form>
-    </div>
+    <h1>aprendendo css INLINE</h1>
+    <br>
+    <p style="color: brown;"> estilizando somente esse conteudo</p>
     
 </body>
 </html>
